# unpod

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.simple.yml  docker-compose.yml  nx.json  package-lock.json  package.json  plan_feb_8.md  pyproject.toml  setup.sh  tsconfig.base.json  tsconfig.json
apps/super/: .env.example  Dockerfile  __init__.py  livekit.toml  pyproject.toml  pytest.ini  requirements-livekit.txt
apps/super/deployment/: docker-compose.yml
apps/super/deployment/cerebrium/: Dockerfile  cerebrium.toml  setup.py
apps/super/deployment/docker/voice_executors/: .env.example  Dockerfile  docker-compose.yml
apps/super/deployment/modal/: modal_app.py  setup.py
apps/super/deployment/services/: voice_lk_executor_v3.service
apps/super/requirements/: super.txt  super_services.txt
apps/super/scripts/: README.md  run_tests.sh  test_voice_agent_coverage.sh  test_voice_agent_suite.sh
apps/super/super/: pyproject.toml
apps/super/super/app/: agent_types.py  call_agents.py  call_execution.py  call_profile.py  call_utils.py  models.py
apps/super/super/app/providers/: __init__.py  base.py  factory.py  livekit_provider.py  pipecat_provider.py  vapi_provider.py
apps/super/super/configs/: __init__.py  app_configs.py  model_configs.py
apps/super/super/core/: constants.py  models.py
apps/super/super/core/block/: base.py  simple.py
apps/super/super/core/callback/: base.py  task_callback.py
apps/super/super/core/config/: constants.py
apps/super/super/core/configuration/: __init__.py  base_config.py  config.py  schema.py
apps/super/super/core/context/: schema.py  unit_of_work.py
apps/super/super/core/handler/: __init__.py  base.py  config.py  echo.py  planning_handler.py  react_handler.py  simple.py  tool_handler.py
apps/super/super/core/indexing/: schema.py
apps/super/super/core/logging/: logging.py
apps/super/super/core/memory/: TEST_SUMMARY.md  base.py  context_cache.py  example_usage.py  schema.py  settings.py  test_context_cache.py  test_faiss.py  vector.py
apps/super/super/core/orchestrator/: __init__.py  base.py  react_orc.py  simple copy.py  simple.py  simple_moduler.py  smartorc.py  super.py
apps/super/super/core/plugin/: __init__.py  base.py  simple.py  utlis.py
apps/super/super/core/resource/: __init__.py  schema.py
apps/super/super/core/state/: base.py  kv.py  mixins.py  pickle.py  vector.py
apps/super/super/core/tools/: __init__.py  adapters.py  base.py  booking.py  exa.py  knowledge_base.py  places.py  telephony.py
apps/super/super/core/utils/: __init__.py  callbacks.py  encryption.py  logger.py  rerank.py  telemetry.py  threadpool_concurrency.py  timing.py  variable_functionality.py
apps/super/super/core/voice/: __init__.py  base.py  base_agent_handler.py  lite_handler.py  prefect.py  schema.py  shared_mixin.py  simple.py  voice_agent_handler.py
apps/super/super/core/workspace/: __init__.py  base.py  simple.py
apps/super/super_services/: __init__.py  last_recording_fetch.json  pyproject.toml
apps/super/super_services/db/services/: __init__.py
apps/super/super_services/evals/: __init__.py  api.py  eval_accuracy_scorer.py  eval_generator.py  test_eval_flow_e2e.py
apps/super/super_services/evals/deployments/: __init__.py  eval_deployments.py
apps/super/super_services/evals/flows/: __init__.py  eval_generation_flow.py
apps/super/super_services/libs/: config.py  logger.py
apps/super/super_services/libs/core/: __init__.py  block_processor.py  broadcaster.py  constant.py  datetime.py  db.py  decorator.py  dict.py  exceptions.py  generator.py  httpx.py  jsondecoder.py  message.py  mixin.py  model.py  mysql.py  postgres.py  redis.py  s3.py  sms.py  sonyflake.py  string.py  timezone_utils.py  utils.py
apps/super/super_services/libs/storage/: kafka_store.py  redis_storage.py
apps/super/super_services/orchestration/cron_jobs/: calls_cron.py  eval_testing.py  post_call.py  recordings_cron.py  update_calls.py  update_calls_v2.py  vapi_recording_cron.py
apps/super/super_services/orchestration/executors/: superkik_executor_v1.py  voice_executor_v3.py
apps/super/super_services/orchestration/task/: task_service.py  task_service_bkp.py
apps/super/super_services/orchestration/webhook/: webhook_handler.py
apps/super/super_services/prefect_setup/: cmd.txt  deploy_help.txt  requirements.txt
apps/super/super_services/prefect_setup/deployments/: create_deployments.py  deployment_config.py  prefect_cleanup.py  tag_concurrency.py  utils.py
apps/super/super_services/prefect_setup/local/: docker-call-worker-compose.yaml  docker-compose-local-base.yaml
apps/super/super_services/prefect_setup/prod/: docker-call-worker-compose.yaml  docker-prefect-sever-compose.yaml
apps/super/super_services/prefect_setup/qa/: docker-call-worker-compose.yaml  docker-compose-qa.yaml
apps/super/super_services/prefect_setup/workpool_config/: call_pool_config.json  create_workpools.py  workpool_defn.py
apps/super/super_services/settings/: base.py  kafka.py  prod.py  qa.py
apps/super/super_services/voice/analysis/: run_task_analysis.py  task_analyser.py
apps/super/super_services/voice/common/: services.py  threads.py
apps/super/super_services/voice/consumers/: call_dispatcher.py  monitor_consumers.py  prefect_task_consumer.py  voice_task_consumer.py
apps/super/super_services/voice/models/: config.py  threads.py
apps/super/super_services/voice/workflows/: README.md  __init__.py  activities.py  worker.py  workflows.py
apps/super/tests/: conftest.py
apps/super/tests/core/: test_integration.py
apps/super/tests/core/handler/: __init__.py  test_planning_handler.py  test_react_handler.py  test_tool_handler.py
apps/super/tests/core/orchestrator/: __init__.py  test_react_orc.py  test_react_orc_context.py
apps/super/tests/core/tools/: __init__.py  test_adapters.py  test_base.py  (+1 more)
apps/unpod-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/unpod-tauri/src-tauri/capabilities/: default.json
apps/unpod-tauri/src-tauri/icons/: icon.icns
apps/unpod-tauri/src-tauri/src/: main.rs
(+2360 files in other folders)
